# popcorn

./: .berryrc  .gitignore  .kernelrc  Cargo.toml  README.md  blame.json  blueberry.py  blueberry.spec  install.ps1  install.sh  observer.py  popcorn.py  popcorn.spec  requirements.txt  strawberry.py  strawberry.spec
.github/workflows/: build.yml  compile.yml  compile_and_release.yml  main.yml
.strawberry/: README.md  blame.json  install.sh  strawberry-dev  strawberry.py
.strawberry/_utils/: styled_print.py
.strawberry/cmds/: build.py  dev.py  help.py  init.py  install.py  remove.py
_utils/: styled_print.py
cmds/: build.py  dev.py  help.py  init.py  install.py  issue.py  remove.py  source.py  theatre.py
src/: cli.rs  lib.rs  main.rs  util.rs
src/commands/: mod.rs
src/commands/dev/: mod.rs
src/commands/init/: mod.rs
src/commands/install/: mod.rs
src/commands/issue/: mod.rs
src/commands/remove/: mod.rs
src/commands/theatre/: mod.rs
src/commands/update/: mod.rs
src/util/: blame.rs
